lab9/k8s/base/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
